tests/fixtures/invalid/float_bitand_bytes.py
# Cannot bitwise AND Float and Bytes
x: float = 1.0 & b"hello"
